overflow issue fixed

--- a/css/gift-card-styles.scss
+++ b/css/gift-card-styles.scss
@@ -12,6 +12,7 @@ body {
 #container {
   margin: 0px auto;
   max-width: 1200px;
+  overflow: hidden;
   h1,
   h2,
   h3,
